traversal.snake.Snake.scala.error
Erreur de compilation :
Snake:9: error: not found: value True
  if(getDirection()==Direction.EST && estFaceMur()==True){
                                                    ^