traversal.snake.Snake.scala.code
override def run() {
  while(!testFinal()){
    pas()
  }
}

def testFinal():Boolean={
  var fin=false
  if(getDirection()==Direction.EST && estFaceMur()==True){
    gauche()
    if(estFaceMur()==true){
      fin=true
    }
    droite()
  }
  return fin
}

def pas(){
  if(!estFaceMur){
    avance()
  }else{
    if(getDirection()==Direction.EST){
      gauche()
      avance()
      gauche()
    }else{
      droite()
      avance()
      droite()
    }
  }
}



